--- a/src/main/resources/templates/plan/plan2.html
+++ b/src/main/resources/templates/plan/plan2.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!--jquery-->
     <script	src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Bootstrap icons-->
@@ -25,6 +25,9 @@
 
 <script src="https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=aDVWgep9DE8rL7yokAybK6jrQIiAk9Ln9jI9CTyf"></script>
 <script th:inline="javascript">
+
+    // areacode
+    let selectedAreaCode = "";
 
     // 날짜
     var days = [[${daysBetween}]];
@@ -76,11 +79,13 @@
 
     console.log(days);
 
+
+
     // 페이지네이션
     function showTourItems(){
-        $(document).on('click','.page-item',function (e) {
+        $(document).on('click','.page-item, .areaSelect',function (e) {
             const target = e.target;
-            // sessionStorage.setItem("cityPageNum", target.getAttribute('data-num'));
+
             if(!target.classList.contains('disabled')){
                 $.ajax({
                     url : '/plan/api/touritems',
@@ -91,7 +96,7 @@
                         cat1 : $('input[name=cat1]:checked').val(),
                         cat2 : $('input[name=cat2]:checked').val(),
                         cat3 : $('input[name=cat3]:checked').val(),
-                        areaCode : $('input[name=area]').val(),
+                        areaCode : selectedAreaCode,
                         sigunguCode : $('input[name=sigungu]:checked').val(),
                         contentTypeId : $('input[name=type]:checked').val()
                     }),
@@ -110,6 +115,120 @@
                     }
                 })
             }
+        });
+    }
+
+    function checkSigungu() {
+        // 지역을 선택하면
+        $('.areaSelect').off('click').on('click', function () {
+            selectedAreaCode = $(this).val(); // 선택된 지역 코드
+            if(selectedAreaCode == null) {
+                sigunguCode = null;
+            }
+
+            $.ajax({
+                url: '/plan/api/sigungu',
+                type: 'POST',
+                contentType : 'application/json; charset=UTF-8',
+                data: JSON.stringify({
+                    page: 0,
+                    areaCode: selectedAreaCode,
+                }),
+                success: function(data) {
+                    //$("html").scrollTop(0);
+                    $('#sigungu').replaceWith(data);
+                },
+                error: function(err) {
+                    console.log(err)
+                }
+            })
+        })
+    }
+
+    function checkCategory(){
+
+        // 카테고리(분류) 선택
+        $('.catSelect').click(function (){
+            const cat1 = $('input[name=cat1]:checked').val() === '' ? null : $('input[name=cat1]:checked').val();
+            $.ajax({
+                url : '/plan/api/cat2',
+                type: 'POST',
+                contentType : 'application/json; charset=UTF-8',
+                data : JSON.stringify({
+                    page : 0,
+                    areaCode : selectedAreaCode,
+                    cat1 : cat1
+                }),
+                success : function(data){
+                    $('#category-middle').replaceWith(data);
+                },
+                error : function (err){
+                    console.log(err)
+                }
+            })
+        })
+
+        $(document).on('click','.cat2Select',function () {
+            const cat1 = $('input[name=cat1]:checked').val() === '' ? null : $('input[name=cat1]:checked').val();
+            const cat2 = $('input[name=cat2]:checked').val() === '' ? null : $('input[name=cat2]:checked').val();
+            $.ajax({
+                url: '/plan/api/cat3',
+                type: 'POST',
+                contentType: 'application/json; charset=UTF-8',
+                data: JSON.stringify({
+                    page : 0,
+                    areaCode : selectedAreaCode,
+                    cat1: cat1,
+                    cat2: cat2
+                }),
+                success: function (data) {
+                    $('#category-row').replaceWith(data);
+                },
+                error: function (err) {
+                    console.log(err)
+                }
+            })
+        })
+    }
+    function selectAndShow(){
+        $(document).on('click','.select-btn',function () {
+            const cat1 = $('input[name=cat1]:checked').val() === '' ? null : $('input[name=cat1]:checked').val();
+            let cat2 = $('input[name=cat2]:checked').val() === '' ? null : $('input[name=cat2]:checked').val();
+            let cat3 = $('input[name=cat3]:checked').val() === '' ? null : $('input[name=cat3]:checked').val();
+            let sigunguCode = $('input[name=sigungu]:checked').val() === '' ? null : $('input[name=sigungu]:checked').val();
+
+            if(cat1 == null){
+                cat2 = null;
+                cat3 = null;
+            }
+            if(cat2 == null){
+                cat3 = null;
+            }
+            if(selectedAreaCode == null) {
+                sigunguCode = null;
+            }
+
+            $.ajax({
+                url : '/plan/api/touritems',
+                type: 'POST',
+                contentType : 'application/json; charset=UTF-8',
+                data : JSON.stringify({
+                    page : 0,
+                    cat1 : cat1,
+                    cat2 : cat2,
+                    cat3 : cat3,
+                    areaCode : selectedAreaCode,
+                    sigunguCode : sigunguCode,
+                    contentTypeId : $('input[name=type]:checked').val()
+                }),
+                success : function(data){
+                    //$("html").scrollTop(0);
+                    $('#touritems').replaceWith(data);
+                },
+                error : function (err){
+                    console.log(err)
+                }
+            })
         })
     }
 
@@ -178,6 +297,13 @@
     $(document).ready(function() {
         initTmap2();
         addPlace();
+        // 지역을 선택하면 선택한 지역의 areaCode를 저장합니다.
+        $(document).on('click', '.areaSelect', function() {
+            selectedAreaCode = $(this).val();
+        });
+        checkCategory();
+        checkSigungu();
+        selectAndShow();
         showTourItems();
     })
 
@@ -749,7 +875,7 @@
         height: 30px;
         top: 50vh;
         left: 0px;
-        z-index: 9999;
+        z-index: 1000;
         border-radius: 0 5px 5px 0;
     }
 
@@ -811,7 +937,7 @@
     }
 
     .map-result {
-        z-index: 9998;
+        z-index: 1001;
     }
     img.thumbnail {
         width: 60px;
@@ -859,6 +985,96 @@
 
 
 <div class="container-fluid">
+
+    <!-- Modal -->
+    <div class="modal fade" id="selectModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">검색설정</h5>
+                    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div>
+                        <h4>지역</h4>
+                        <div id="area-list-box">
+                            <th:block th:each="area, idx : ${areaList}">
+                                <input type="radio" class="areaSelect btn-check" name="areaSelect" th:id="|area${idx.count}|" autocomplete="off"
+                                       th:value="${area.areaCode}">
+                                <label class="btn btn-3 btn-area" th:for="|area${idx.count}|" th:text="|${area.areaName}|">
+                                </label>
+                            </th:block>
+                        </div>
+
+                        <div id="tagSelector">
+                            <input type="hidden" name="area">
+                            <div id="content_type">
+                                <h5>- 관광 타입 -</h5>
+                                <input type="radio" class="typeSelect btn-check select-btn" name="type" id="type0" autocomplete="off" value="" checked>
+                                <label class="btn btn-2" for="type0" th:text="전체"></label>
+                                <th:block th:each="type, idx : ${contentTypeList}">
+                                    <input type="radio" class="typeSelect btn-check select-btn" name="type" th:id="|type${idx.count}|" autocomplete="off" th:value="${type.contentTypeId}">
+                                    <label class="btn btn-2" th:for="|type${idx.count}|" th:text="${type.contentTypeName}"></label>
+                                </th:block>
+                            </div>
+                            <div id="category">
+                                <div id="cat1Selector">
+                                    <h5>- 대분류 -</h5>
+                                    <input type="radio" class="catSelect btn-check select-btn" name="cat1" id="cat1-0" autocomplete="off" value="" checked>
+                                    <label class="btn btn-2" for="cat1-0" th:text="전체"></label>
+                                    <th:block th:each="cat1, idx : ${cat1List}">
+                                        <input type="radio" class="catSelect btn-check select-btn" name="cat1" th:id="|cat1-${idx.count}|" autocomplete="off" th:value="${cat1.cat1}">
+                                        <label class="btn btn-2" th:for="|cat1-${idx.count}|" th:text="${cat1.cat1Name}"></label>
+                                    </th:block>
+                                </div>
+
+                                <div id="category-middle">
+                                    <div id="cat2Selector" th:if="${cat2List.size() > 0}">
+                                        <h5>- 중분류 -</h5>
+                                        <input type="radio" class="cat2Select btn-check select-btn" name="cat2" id="cat2-0" autocomplete="off" value="" checked>
+                                        <label class="btn btn-2" for="cat2-0" th:text="전체"></label>
+                                        <th:block th:each="cat2, idx : ${cat2List}">
+                                            <input type="radio" class="cat2Select btn-check select-btn" name="cat2" th:id="|cat2-${idx.count}|" autocomplete="off" th:value="${cat2.cat2}">
+                                            <label class="btn btn-2" th:for="|cat2-${idx.count}|" th:text="${cat2.cat2Name}"></label>
+                                        </th:block>
+                                    </div>
+                                    <div id="category-row">
+                                        <div id="cat3Selector" th:if="${cat3List.size() > 0}">
+                                            <h5>- 소분류 -</h5>
+                                            <input type="radio" class="cat3Select btn-check select-btn" name="cat3" id="cat3-0" autocomplete="off" value="" checked>
+                                            <label class="btn btn-2" for="cat3-0" th:text="전체"></label>
+                                            <th:block th:each="cat3, idx : ${cat3List}">
+                                                <input type="radio" class="cat3Select btn-check select-btn" name="cat3" th:id="|cat3-${idx.count}|" autocomplete="off" th:value="${cat3.cat3}">
+                                                <label class="btn btn-2" th:for="|cat3-${idx.count}|" th:text="${cat3.cat3Name}"></label>
+                                            </th:block>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="sigungu">
+                                <div id="sigunguSelector" th:if="${sigunguList.size() > 0}">
+                                    <h5>- 상세 지역 -</h5>
+                                    <input type="radio" class="sigunguSelect btn-check select-btn" name="sigungu" id="sigungu0" autocomplete="off" value="" checked>
+                                    <label class="btn btn-2" for="sigungu0" th:text="전체"></label>
+                                    <th:block th:each="sigungu, idx : ${sigunguList}">
+                                        <input type="radio" class="sigunguSelect btn-check select-btn" name="sigungu" th:id="|sigungu${idx.count}|" autocomplete="off" th:value="${sigungu.sigunguCode}">
+                                        <label class="btn btn-2" th:for="|sigungu${idx.count}|" th:text="${sigungu.sigunguName}"></label>
+                                    </th:block>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!--한줄로 정렬합니다.-->
     <div class="row">
         <!--여행 몇일차인지-->
@@ -906,22 +1122,16 @@
                     <input class="search-bar__input" placeholder="장소를 검색하세요.">
                     <button class="search-btn" type="submit"><i class="bi bi-search"></i></button>
                 </div>
-                <!--장소선택이 들어가야 하는 부분, 추후에 구현-->
-<!--                <div class="wrap">-->
-<!--                    <div class="flex-box">-->
-<!--                        <h2 id="areaName" th:text="${selectedArea.areaName}"></h2>-->
-<!--                        &lt;!&ndash; Button trigger modal &ndash;&gt;-->
-<!--                        <button type="button" class="btn btn-2 btn-primary2 btn-select-area " id="morebtn" >지역선택</button>-->
-<!--                    </div>-->
-<!--                    <div id="area-list-box" class = "invisiblecard">-->
-<!--                        <th:block th:each="area, idx : ${areaList}">-->
-<!--                            <input type="radio" class="areaSelect btn-check" name="areaSelect" th:id="|area${idx.count}|" autocomplete="off"-->
-<!--                                   th:value="${area.areaCode}" th:checked="${selectedArea.areaCode == area.areaCode}">-->
-<!--                            <label class="btn btn-3 btn-area" th:for="|area${idx.count}|"><a th:href="@{/info/city/{areaCode}(areaCode = ${area.areaCode})}" th:text="|${area.areaName}|"></a></label>-->
-<!--                        </th:block>-->
-<!--                    </div>-->
-<!--                </div>-->
-
+                <div class="flex-box">
+                    <!--장소선택이 들어가야 하는 부분-->
+                    <div class="wrap">
+                        <div class="flex-box">
+                            <h2 id="areaName"></h2>
+                            <!-- 선택하면 옵션을 설정하는 모달을 띄웁니다. -->
+                            <button type="button" class="btn btn-2 btn-primary2 btn-select-area " id="morebtn" data-bs-toggle="modal" data-bs-target="#selectModal">검색설정</button>
+                        </div>
+                    </div>
+                </div>
 
                 <div class="search-scroll list-group list-group-flush border-bottom scrollarea">
                     <div class="flex overflow-x-hidden">
@@ -1041,5 +1251,6 @@
             </th:block>
         </div>
     </div>
+</div>
 </body>
 </html>
