마이페이지 리뷰목록 조회 추가중...

--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -440,6 +440,7 @@
     });
 
     let selectedReviewBook;
+    let selectedBookId;
     const fileInput = $('#img-uploader')[0];
     const images = [];
 
@@ -455,7 +456,8 @@
         $('#new-book-title').val('');
         $('#exist-book-select').html('<option value="hint" class="select-hint" disabled selected>리뷰를 작성할 리뷰북을 선택하세요.</option>');
         // 에디터 내용 초기화
-        selectedReviewBook = "";
+        selectedReviewBook = null;
+        selectedBookId = null;
         $('.book-input').attr('disabled', true);
         $('#selected-review-book').val('');
         $('#select-touritem-info').html(
@@ -511,7 +513,6 @@
         if(login == "anonymousUser"){
             alert("리뷰는 로그인 후 작성할 수 있습니다.")
         }else {
-            //todo: 모달 실행 시 리뷰북, 플래너 목록 띄워주기
             showSelectList();
             $('#select-book').modal('show');
         }
@@ -584,6 +585,7 @@
                 }),
                 contentType : 'application/json; charset=UTF-8',
                 success : function (createdBookId) {
+                    selectedBookId = createdBookId;
                     resolve(createdBookId);
                 },
                 error : function (err) {
@@ -622,6 +624,7 @@
 
     function existBookAndAddPlanList(){
         let bookId = $('#exist-book-select option:selected').val();
+        selectedBookId = bookId;
         let promise = new Promise((resolve) => {
             $.ajax({
                 url : '/review/show_plan',
@@ -680,9 +683,9 @@
         let formData = new FormData();
         let loginUser = [[${loginUserId}]]
 
-        formData.append("bookId", "1"); /*test*/
+        formData.append("bookId", selectedBookId); /*test*/
         formData.append("userId", `${loginUser}`);
-        formData.append("touritemId", "1080734"); /*test*/
+        formData.append("touritemId", $('#select-touritem-info option:selected').val());
         formData.append("touritemTitle", $('#selected-touritem-name').val());
         formData.append("reviewContent", $('#review-contents').val());
 
