--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,8 +24,8 @@
 
 <script>
     $(document).ready(function (){
-        let prevUrl = document.referrer;
-        $('input[name=prevUrl]').val(prevUrl);
+        // let prevUrl = document.referrer;
+        // $('input[name=prevUrl]').val(prevUrl);
     })
 
     // 아이디 찾기
