--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -58,16 +58,16 @@
         <!-- End of profile section -->
         <ul class="nav nav-underline mb-3 justify-content-center">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#" onclick="changeTab('review')">내 리뷰</a>
+                <a class="nav-link active" aria-current="page" onclick="changeTab('review')">내 리뷰</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">내 리뷰북</a>
+                <a class="nav-link">내 리뷰북</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">관심 리뷰</a>
+                <a class="nav-link">관심 리뷰</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#" onclick="changeTab('bookmark')">북마크</a>
+                <a class="nav-link" onclick="changeTab('bookmark')">북마크</a>
             </li>
         </ul>
 
@@ -281,7 +281,9 @@
     let tabType = "bookmark"; // 화면에 보여줄 탭
     let back = false;
     $(document).ready(function (){
-        changeTab(tabType);
+        gallery.html("")
+        observer.observe(document.getElementById('load-point'));
+        $('#load-point').hide(); // 옵저버 관측 타이밍을 컨트롤하기 위해 hide
         loadPage();
     })
 
@@ -294,19 +296,26 @@
             //옵저버 타겟 설정
             observer.observe(document.getElementById('load-point'));
             // 페이지를 불러오는 함수 호출.
-            showBookmark();
+            switch (tabType){
+                case "bookmark" :
+                    showBookmark();
+                    break;
+                case "review" :
+                    showReview();
+                    break
+            }
         });
     });
 
     // 탭을 이동시 마다 변수 및 기존 화면 초기화(탭 이동시 마다 실행 해주세요.)
     function changeTab(type) {
+        observer.disconnect()
         tabType = type;
         scrollPage = 0;
         scrollCheck = false;
         firstLoad = true;
         back = false;
         gallery.html("")
-        $('#load-point').hide() // 옵저버 관측 타이밍을 컨트롤하기 위해 hide
         // 옵저버 타겟 관측 시작
         observer.observe(document.getElementById('load-point'));
     }
@@ -448,6 +457,7 @@
         myPageInfo.scrollPage = scrollPage;
         myPageInfo.scrollPosition = window.scrollY.toString();
         sessionStorage.setItem("myPageInfo", JSON.stringify(myPageInfo));
+        observer.disconnect();
     }
 
     function loadPage() {
